--- a/css/Home.css
+++ b/css/Home.css
@@ -39,6 +39,7 @@
 	width: 100%;
 	display: flex;
 	flex-flow: row;
+	overflow: hidden;
 }
 
 #Home .background>* {
@@ -223,9 +224,13 @@
 
 .HomeRightTop .inputField>input {
 	width: 100%;
-	font-size: .8em;
+	font-size: 16px;
 	padding: 0 0.5em;
 	font-style: italic;
+}
+
+.HomeRightTop .inputField>input, select:focus{
+	font-size: 16px;
 }
 
 .HomeRightTop .inputField>input:focus {
@@ -341,7 +346,7 @@
 	white-space: normal !important;
 }
 
-#signUpResponse{
+#signUpResponse {
 	display: flex;
 	flex-flow: column;
 	justify-content: center;
@@ -502,7 +507,7 @@
 		position: absolute;
 		right: 10vw;
 	}
-	#signUpResponse{
+	#signUpResponse {
 		height: 34vh;
 	}
 }
@@ -615,7 +620,7 @@
 	#Home .background .right {
 		height: 100vh;
 	}
-	#signUpResponse{
+	#signUpResponse {
 		height: unset;
 	}
 }
@@ -634,5 +639,38 @@
 		width: 50%;
 		height: 100% !important;
 		transform: unset;
+	}
+}
+
+/*This part aims to fix the issue of changing aspect-ratio on mobiles, when soft (virtual) keyboard comes up*/
+
+@media only screen and (max-width: 500px) and (max-height: 520px) {
+	#Home {
+		max-height: unset;
+	}
+	#Home .pageContent {
+		flex-flow: column;
+	}
+	#phone_mockup {
+		display: none !important;
+	}
+	#HomeLeft, #HomeRight {
+		align-items: center;
+		text-align: center;
+	}
+}
+
+@media only screen and (orientation: landscape) and (max-width: 850px) {
+	.aboutSections {
+		width: 300vw !important;
+		max-width: unset !important;
+		margin-left: 0 !important;
+		align-self: flex-start !important;
+	}
+	.aboutSection {
+		width: 100vw !important;
+	}
+	.aboutCarouselButtons {
+		display: flex !important;
 	}
 }
